microservices-bootcamp-main/back-end-containers/deploy/k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: api
spec:
  containers:
  - name: api
    image: {aws_account_id}.dkr.ecr.{aws_region}.amazonaws.com/lumberyardapi:{tag}
    ports:
      - containerPort: 80
