microservices-bootcamp-main/back-end-containers/deploy/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lumberyard-api
  labels:
    app: api
    type: web
spec:
  template:
    metadata:
      labels:
        app: api
        type: web
    spec:
      serviceAccountName: api-service-account
      containers:
      - name: api
        image: {aws_account_id}.dkr.ecr.{aws_region}.amazonaws.com/lumberyardapi:{tag}
        ports:
          - containerPort: 80
  replicas: 3
  selector:
    matchLabels:
      type: web
  revisionHistoryLimit: 3
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: api
