microservices-bootcamp-main/back-end-containers/deploy/k8s/inventoryDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lumberyard-inventory-api
  labels:
    app: inventory-api
    type: web
spec:
  template:
    metadata:
      labels:
        app: inventory-api
        type: web
    spec:
      serviceAccountName: api-service-account
      containers:
      - name: inventory-api
        image: {aws_account_id}.dkr.ecr.{aws_region}.amazonaws.com/lumberyardinventoryapi:{tag}
        ports:
          - containerPort: 80
  replicas: 3
  selector:
    matchLabels:
      type: web
  revisionHistoryLimit: 3
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-api-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: inventory-api
