microservices-bootcamp-main/back-end-containers/deploy/k8s/inventory-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - {backend_domain}
      secretName: api-ingress-tls
  rules:
    - host: {backend_domain}
      http:
        paths:
          - path: /api/inventory
            pathType: Prefix 
            backend:
              service:
                name: inventory-api-service
                port:
                  number: 80
